--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -6,5 +6,9 @@ jobs:
     steps:
       - name: Print Greeting
         run: echo "Hello World!"
+      - name: Multi Line Shell commands
+        run: |
+          echo "First Output"
+          echo "Second Output"
       - name: Print Goodbye
         run: echo "Done - bye!"
