--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -1,4 +1,4 @@
-name: Test Project
+name: Deploy Project
 on: push
 jobs:
   test:
@@ -6,14 +6,25 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
-
       - name: Install Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: Install Dependencies
         run: npm install
-
       - name: Run tests
         run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Build Project
+        run: npm run build
+      - name: Deploy
+        run: echo "Deploying..."
