--- a/.github/workflows/metadata.yml
+++ b/.github/workflows/metadata.yml
@@ -1,8 +1,8 @@
-name: Practise Metadata Project
-on: push
+name: Display Event Project
+on: issues
 jobs:
   output-context:
     runs-on: ubuntu-latest
     steps:
-      - name: output metadata
-        run: echo "${{ toJSON(github) }}"
+      - name: output event details
+        run: echo "${{ toJSON(github.event) }}"
