--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 name: Practise Project
-on: push
+on:
+  pull_request:
+    - opened
+  workflow_dispatch:
 jobs:
   lint:
     runs-on: ubuntu-latest
