--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -1,33 +1,40 @@
 name: Deploy Project
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - name: Install Dependencies
         run: npm install
       - name: Run tests
         run: npm test
 
-  deploy:
+  build:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
-        uses: actions/checkout@v3
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+        uses: action/checkout@v3
       - name: Install Dependencies
         run: npm ci
-      - name: Build Project
+      - npm: Build website
         run: npm run build
+      - npm: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: |
+            dist
+            package.json
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy
         run: echo "Deploying..."
