--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -22,7 +22,7 @@ jobs:
         uses: action/checkout@v3
       - name: Install Dependencies
         run: npm ci
-      - npm: Build website
+      - name: Build website
         run: npm run build
       - npm: Upload artifacts
         uses: actions/upload-artifact@v3
