--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - npm: Upload artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
