--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
       - name: Install Dependencies
         run: npm ci
       - name: Build website
@@ -33,7 +33,7 @@ jobs:
             package.json
 
   deploy:
-    needs: test
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Deploy
