--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -17,6 +17,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file-name: ${{ steps.js-filename.outputs.file-name }}
     steps:
       - name: Get Code
         uses: actions/checkout@v3
@@ -24,6 +26,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS file name
+        id: js-filename
+        run: file dist/assets -name "*.js" -type f -execdir echo "file-name={}" >> $GITHUB_OUTPUT ";"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -42,5 +47,7 @@ jobs:
           name: dist-files
       - name: Output contents
         run: ls
+      - name: Output filename
+        run: echo ${{ needs.build.outputs.script-file-name }}
       - name: Deploy
         run: echo "Deploying..."
