--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run build
       - name: Publish JS file name
         id: js-filename
-        run: file dist/assets -name "*.js" -type f -execdir echo "file-name={}" >> $GITHUB_OUTPUT ";"
+        run: file dist/assets/*.js -type f -execdir echo "file-name={}" >> $GITHUB_OUTPUT ";"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
