--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Cache Dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles("**/package-lock.json") }}
       - name: Install Dependencies
         run: npm install
       - name: Run tests
@@ -22,6 +27,11 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Cache Dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles("**/package-lock.json") }}
       - name: Install Dependencies
         run: npm ci
       - name: Build website
