change npm command for installing dependencies

--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -16,7 +16,7 @@ jobs:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
       - name: Run tests
         run: npm test
 
