--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -19,6 +19,11 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
+      - name: Upload test report
+        run: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: test.json
 
   build:
     needs: test
