--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Run tests
         run: npm test
       - name: Upload test report
-        run: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: test.json
