--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -18,8 +18,10 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Run tests
+        id: run-tests
         run: npm test
       - name: Upload test report
+        if: steps.run-tests.outcome == "failure"
         uses: actions/upload-artifact@v4
         with:
           name: test-report
