--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -21,7 +21,7 @@ jobs:
         id: run-tests
         run: npm test
       - name: Upload test report
-        if: steps.run-tests.outcome == 'failure'
+        if: failed() && steps.run-tests.outcome == 'failure'
         uses: actions/upload-artifact@v4
         with:
           name: test-report
