--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -78,4 +78,4 @@ jobs:
       - name: Output information
         run: |
           echo "Something went wrong"
-          echo ${{ toJSON(github) }}
+          echo "${{ toJSON(github) }}"
