--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -11,11 +11,13 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Cache Dependencies
+        id: cache
         uses: actions/cache@v4
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Run tests
         id: run-tests
@@ -36,11 +38,13 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Cache Dependencies
+        id: cache
         uses: actions/cache@v4
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Build website
         run: npm run build
