--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -62,18 +62,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-files
-      - name: Output contents
-        run: ls
-      - name: Output filename
-        run: echo ${{ needs.build.outputs.script-file-name }}
-      - name: Deploy
-        run: echo "Deploying..."
+    uses: ./.github/workflows/reusable.yml
 
   report:
     needs: deploy
