--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,8 +1,21 @@
 name: Reusable Deploy
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      artifact-name:
+        description: The name of the deployable artifact file
+        required: true
+        type: string
+        default: dist
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.artifact-name }}
+      - name: List contents
+        run: ls
       - name: Output information
         run: echo "Deploying & uploading ..."
