--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,6 +7,9 @@ on:
         required: true
         type: string
         default: dist
+    secrets:
+      some-secret:
+        required: true
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,5 +20,7 @@ jobs:
           name: ${{ inputs.artifact-name }}
       - name: List contents
         run: ls
+      - name: Echo Secret
+        run: echo "${{ secrets.some-secret }}"
       - name: Output information
         run: echo "Deploying & uploading ..."
