passing all secrets

--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -65,8 +65,7 @@ jobs:
     uses: ./.github/workflows/reusable.yml
     with:
       artifact-name: dist-files
-    secrets:
-      some-secret: ${{ secrets.SOME_SECRET }}
+    secrets: inherit
 
   report:
     needs: deploy
