--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,6 +7,9 @@ on:
         required: true
         type: string
         default: dist
+    secrets:
+      SOME_SECRET:
+        required: true
 #    secrets:
 #      some-secret:
 #        required: true
