--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: node:latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
