--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -12,15 +12,8 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
-      - name: Cache Dependencies
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Load & cache Dependencies
+        uses: ./.github/actions/cached-deps
       - name: Run tests
         id: run-tests
         continue-on-error: true
@@ -40,15 +33,8 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
-      - name: Cache Dependencies
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Load & cache Dependencies
+        uses: ./.github/actions/cached-deps
       - name: Build website
         run: npm run build
       - name: Publish JS file name
