--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Load & cache Dependencies
         uses: ./.github/actions/cached-deps
+        with:
+          caching: false
       - name: Run tests
         id: run-tests
         continue-on-error: true
