--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -13,9 +13,12 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Load & cache Dependencies
+        id: cache-deps
         uses: ./.github/actions/cached-deps
         with:
           caching: false
+      - name: Ouput Information
+        run: echo "Cached used = ${{ steps.cache-deps.output.used-cache }}"
       - name: Run tests
         id: run-tests
         continue-on-error: true
