--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -78,3 +78,9 @@ jobs:
         run: |
           echo "Something went wrong"
           echo "${{ toJSON(github) }}"
+
+  information:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run custom action
+        uses: ./.github/actions/deploy-s3-javascript
