--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -82,5 +82,7 @@ jobs:
   information:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v3
       - name: Run custom action
         uses: ./.github/actions/deploy-s3-javascript
