--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -67,9 +67,10 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         uses: ./.github/actions/deploy-s3-javascript
-        bucket: gha-website-hosting-bucket
-        bucket-region: ap-south-1
-        dist-folder: ./dist
+        with:
+          bucket: gha-website-hosting-bucket
+          bucket-region: ap-south-1
+          dist-folder: ./dist
 
 
   #  deploy:
