--- a/.github/workflows/1-test.yml
+++ b/.github/workflows/1-test.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Download artifact
-        uses: actions:/download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: dist-files
           path: ./dist
